--- a/core/java/src/net/i2p/client/package.html
+++ b/core/java/src/net/i2p/client/package.html
@@ -31,13 +31,5 @@ but there are three other subpackages that are helpful.  Specifically:<ul>
 </ul></p>
 
 <p>The {@link net.i2p.client.I2PSession} implementation itself communicates with
-the I2P router by the I2CP (the client protocol).  This is done over a 
-bidirectional TCP socket and never sends any private keys - all end to end 
-encryption is done transparently within the client's {@link net.i2p.client.I2PSession} 
-itself.  Periodically the router will ask the client to authorize a new set of
-tunnels to be allocated to the client, which the client can accept by sending a
-{@link net.i2p.data.LeaseSet} signed by the {@link net.i2p.data.Destination}.  In
-addition, the router may on occation provide the client with an updated clock 
-offset so that the client can stay in sync with the network (even if the host
-computer's clock is off).</p>
+the I2P router by the I2CP (the client protocol).</p>
 </body></html>
