let windows users install/remove the service through the /configservice.jsp page
Monotone-Parent: 73e00b4920a08f83a215f8d08df32e51d0c960c8
Monotone-Revision: 26edb80d5313f1eac5f4f501edb4add8f1fd9e69

Monotone-Author: jrandom
Monotone-Date: 2004-08-31T21:25:23
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -21,10 +21,12 @@ linked together).</p>
 
 <p>With the I2P install we've bundled some scripts and code (from the cool folks at 
 <a href="http://wrapper.tanukisoftware.org/doc/english/">tanukisoftware</a>) to let you
-run I2P as a service on windows machines (a daemon, for you *nix geeks).  To install it, 
-just run install_i2p_service_winnt.bat (or install_i2p_service_unix, as root).  To uninstall
-it, run uninstall_i2p_service_winnt.bat (or uninstall_i2p_service_unix, as root).  To uninstall
-I2P altogether, simply wipe the I2P installation directory.</p>
+run I2P as a service on windows machines (a daemon, for you *nix geeks).  Windows users can 
+add or remove the I2P service on the <a href="/configservice.jsp">service control page</a>, or
+through the install_i2p_service_winnt.bat and uninstall_i2p_service_winnt.bat scripts.  *nix 
+users can use the install_i2p_service_unix and uninstall_i2p_service_unix scripts included, but
+they must be run as root.  To uninstall I2P altogether, simply wipe the I2P installation 
+directory.</p>
 
 <h2>What next?</h2>
 
