within the installation, move readme.html to docs/readme.html
Monotone-Parent: 850a08113e127771971658890aea4cd327a72d0e
Monotone-Revision: c3f9fdbb6215664651893e2d432ee80ba749516e

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T01:22:33
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -60,4 +60,4 @@ the <a href="/i2ptunnel/" target="_blank">I2PTunnel configuration interface</a> 
 You can also go to that page if you want to add a new tunnel, such as if you want to run
 your own eepsite.</p>
 
-<p><b>As a note, you can change this page by editing the file "readme.html"</b></p>
+<p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
