2004-09-03  jrandom     * Updated default wrapper.config to deal with the hard restart option     * Include the history.txt in the /help.jsp page     * HTML updates (wrapper.log, and no more unix scripts)     * Updated VERSION constants to 0.4
Monotone-Parent: 030e3add5522a109ca4d667ae596f9b673e05da5
Monotone-Revision: 721ac523d71eb6201c52da4315b44b177182ac5c

Monotone-Author: jrandom
Monotone-Date: 2004-09-03T19:46:07
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4

--- a/readme.html
+++ b/readme.html
@@ -24,9 +24,9 @@ linked together).</p>
 run I2P as a service on windows machines (a daemon, for you *nix geeks).  Windows users can 
 add or remove the I2P service on the <a href="/configservice.jsp">service control page</a>, or
 through the install_i2p_service_winnt.bat and uninstall_i2p_service_winnt.bat scripts.  *nix 
-users can use the install_i2p_service_unix and uninstall_i2p_service_unix scripts included, but
-they must be run as root.  To uninstall I2P altogether, simply wipe the I2P installation 
-directory.</p>
+users can script up something to call <code>./i2prouter start</code> with the appropriate 
+environment ($PATH, $JAVA_HOME, etc) and user id (I2P does not require root).  To uninstall 
+I2P altogether, simply wipe the I2P installation directory.</p>
 
 <h2>What next?</h2>
 
