* protocol doc & impl cleanup * more defensive programming * more javadoc updates
Monotone-Parent: 07a327df5e7bd941c5fe12c7e7bae7804ae2b87a
Monotone-Revision: d611687e59d70a615c61219c16e6ccbfe302f74d

Monotone-Author: jrandom
Monotone-Date: 2004-09-28T08:34:48
Monotone-Branch: i2p.i2p

--- a/router/java/src/net/i2p/router/transport/tcp/package.html
+++ b/router/java/src/net/i2p/router/transport/tcp/package.html
@@ -64,7 +64,8 @@ remainder of the communication is AES256 encrypted per
 <p><b>8) </b> <i>Bob to Alice</i>: <br />
    <code>routerInfo + status + properties + H(routerInfo + status + properties + nonce + tag)</code></p>
 <p><b>9) </b> If the <code>status</code> is ok, both Alice and Bob consume the 
-   <code>tagData</code>, updating the next tag to be <code>H(E(nonce + tag, sessionKey))</code>.
+   <code>tagData</code>, updating the next tag to be <code>H(E(nonce + tag, sessionKey))</code>
+   (with nonce+tag padded with 12 bytes of 0x0 at the end).
    Otherwise, both sides disconnect and do not consume the tag.  In addition, on error the 
    <code>properties</code> mapping has a more detailed reason under the key "MESSAGE".</p>
    
