removed fproxy2, added postman
Monotone-Parent: 99e3159d3a208b9b3f0ce172abf180b981762e9e
Monotone-Revision: 0314ecbc820a5e14c41a95996e897a6a7dc12862

Monotone-Author: jrandom
Monotone-Date: 2004-11-07T02:49:40
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -46,8 +46,10 @@ to reach some of the following sites:</p>
  <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
  <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
  <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
- <li><a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="http://fproxy2.i2p/">fproxy2.i2p</a>:
-     a secure and anonymous connection to two different freenet nodes</li>
+ <li><a href="http://fproxy.i2p/">fproxy.i2p</a>:
+     a secure and anonymous connection to a freenet node</li>
+ <li><a href="http://www.postman.i2p/">www.postman.i2p</a>: an anonymous email provider, allowing 
+     mail within I2P, as well as to and from the internet (via @i2pmail.org)</li>
 </ul>
 
 <p>The IRC proxy is a gateway to duck's anonymously hosted IRC server 
