2004-12-05  jrandom     * Fixed some links in the console (thanks ugha!) and the javadoc       (thanks dinoman!)     * Fix the stream's passive flush timer (oh, its supposed to work?)
Monotone-Parent: e8f5312568fa85f36c3a1a060bfe05125f6f13fe
Monotone-Revision: 6e3053e673369f705fba26ee00826e2417ed5684

Monotone-Author: jrandom
Monotone-Date: 2004-12-05T10:22:57
Monotone-Branch: i2p.i2p

--- a/core/java/src/net/i2p/client/package.html
+++ b/core/java/src/net/i2p/client/package.html
@@ -27,7 +27,7 @@ but there are three other subpackages that are helpful.  Specifically:<ul>
 <li>{@link net.i2p.client.streaming} - for applications that want to use 
     a streaming API to provide reliable in order message delivery (<b>note</b>:
     the streaming library is packaged seperate from the main SDK - in the 
-    ministreaming.jar)</li>
+    mstreaming.jar and streaming.jar)</li>
 </ul></p>
 
 <p>The {@link net.i2p.client.I2PSession} implementation itself communicates with
