2004-12-31  jrandom     * Speling fxi (thanks digum!)     * Bugfix for the I2PTunnel web interface so that it now properly launches       newly added tunnels that are defined to be run on startup (thanks ugha!)
Monotone-Parent: 20693db91458c2fb2726c7af54dc7fcf76e0c34d
Monotone-Revision: 9be9301b489b976c798e23a17a7fc4334d35d2ba

Monotone-Author: jrandom
Monotone-Date: 2004-12-31T17:18:05
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -54,7 +54,7 @@ IRC (be sure to split it into two lines, as its too long for one).</p>
 
 <p>If the left hand side has a warning, telling you to check your NAT or firewall, please
 see the <a href="/config.jsp">config page</a> and make sure that you can receive <b>inbound
-TCP connections on port 8887</b> (or another port that you specify).  Probelms forwarding
+TCP connections on port 8887</b> (or another port that you specify).  Problems forwarding
 that port account for the vast majority of issues people run into.  When it says 
 "Active: 72/85", the "72" means how many peers you are connected with now, and "85" means 
 how many you have spoken with recently - if that first number is 0, you can bet that there
