* 2005-01-06  0.4.2.6 released 2005-01-06  jrandom     * Added a startup message to the addressbook, printing its version number       to stdout (which is sent to wrapper.config) when it loads.     * Updated the addressbook to reread the config file periodically     * Added orion.i2p to the list of eepsites on the default homepage
Monotone-Parent: 99e8028f8a8d2f89afe54afefdf9c9ad7bf0a047
Monotone-Revision: ab766aae160250015a2eb17980b1123a3ff59cab

Monotone-Author: jrandom
Monotone-Date: 2005-01-06T20:59:13
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4_2_6

--- a/readme.html
+++ b/readme.html
@@ -16,6 +16,7 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      <ul>
          <li><a href="http://duck.i2p/">duck.i2p</a>: duck's eepsite, with links to other active sites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
+         <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
          <li><a href="http://files.i2p/">files.i2p</a>: a search engine that tries to keep track of things on I2P</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
