--- a/readme.html
+++ b/readme.html
@@ -21,7 +21,6 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li><a href="http://fproxy.i2p/">fproxy.i2p</a>: a secure and anonymous connection to a freenet node</li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
@@ -33,7 +32,9 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      of the <a href="http://www.bittorrent.com/">BitTorrent</a> application available.</li>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
-     internet!  get your account at <a href="http://www.postman.i2p/">www.postman.i2p</a>.</li>
+     internet!  get your account at <a href="http://www.postman.i2p/">www.postman.i2p</a>.
+     We bundle <a href="http://susi.i2p/">susimail</a>, a web based anonymity-oriented pop3/smtp client
+     configured to access postman's mail services.</li>
  <li>and lots more</li>
 </ul>
 
@@ -42,8 +43,9 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
 <p>We've bundled some software to let you run your own eepsite - a 
 <a href="http://jetty.mortbay.org/">Jetty</a> instance listening on 
 <a href="http://localhost:7658/">http://localhost:7658/</a>.  Simply place your files in
-the <code>eepsite/docroot/</code> directory (or any standard JSP/Servlet <code>.war</code>
-files under <code>eepsite/webapps</code>) and they'll show up.  Your eepsite's 
+the <code>eepsite/docroot/</code> directory (or place any standard JSP/Servlet <code>.war</code>
+files under <code>eepsite/webapps</code>, or standard CGI script under <code>eepsite/cgi-bin</code>) 
+and they'll show up.  Your eepsite's 
 <i>destination</i> (which uniquely and securely identifies it) is shown on the I2PTunnel
 <a href="/i2ptunnel/">configuration page</a> - if you want other people to see your eepsite,
 you need to give them that really huge string.  Just paste it into the 
