(not yet tagging this 0.5, but I don't think there's anytihng left) 2005-02-17  jrandom     * If the clock is adjusted during a job run, don't act as if the job took       negative time.
Monotone-Parent: b362a823a821be5033ad46deab4a5f2b9ee5ec3e
Monotone-Revision: c050966453198527a94f7e64025845e85a7c1215

Monotone-Author: jrandom
Monotone-Date: 2005-02-17T22:57:53
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -50,7 +50,7 @@ and they'll show up.  Your eepsite's
 <a href="/i2ptunnel/">configuration page</a> - if you want other people to see your eepsite,
 you need to give them that really huge string.  Just paste it into the 
 <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce</a> forum, add it to
-ugha's <a href="http://ugha.i2p/I2pLinks">wiki</a>, or paste it in the #i2p or #i2p-chat channels on
+ugha's <a href="http://ugha.i2p/I2pLinks">wiki</a>, <a href="http://orion.i2p/">orion's list</a>, or paste it in the #i2p or #i2p-chat channels on
 IRC (be sure to split it into two lines, as its too long for one).</p>
 
 <h2><a name="trouble">Troubleshooting</a></h2>
