fproxy.i2p and www1.squid.i2p are back (yay!)
Monotone-Parent: 4427e5f7ac1cb303f9e6f059f9da36636fd19d7d
Monotone-Revision: 6ab86916084a742d7a7084c3cb0bddb8ea8f5170

Monotone-Author: jrandom
Monotone-Date: 2005-02-18T00:52:26
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -21,6 +21,7 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
+         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="http://freenet.eco.i2p/">freenet.eco.i2p</a></li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
