* 2005-07-27  0.6 released 2005-07-27  jrandom     * Enabled SSU as the default top priority transport, adjusting the       config.jsp page accordingly.     * Add verification fields to the SSU and TCP connection negotiation (not       compatible with previous builds)     * Enable the backwards incompatible tunnel crypto change as documented in       tunnel-alt.html (have each hop encrypt the received IV before using it,       then encrypt it again before sending it on)     * Disable the I2CP encryption, leaving in place the end to end garlic       encryption (another backwards incompatible change)     * Adjust the protocol versions on the TCP and SSU transports so that they       won't talk to older routers.     * Fix up the config stats handling again     * Fix a rare off-by-one in the SSU fragmentation     * Reduce some unnecessary netDb resending by inluding the peers queried       successfully in the store redundancy count.
Monotone-Parent: 98952c738ff3589ac20e6f9fb46aedd71e0a30ab
Monotone-Revision: 7f32e2171fabe0cb2ee3cd11b829dc150034a300

Monotone-Author: jrandom
Monotone-Date: 2005-07-27T19:03:43
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -15,11 +15,10 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
          <li><a href="http://duck.i2p/">duck.i2p</a>: duck's eepsite, with links to other active sites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
-         <li><a href="http://files.i2p/">files.i2p</a>: a search engine that tries to keep track of things on I2P</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="http://freenet.eco.i2p/">freenet.eco.i2p</a></li>
+         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a></li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
@@ -56,7 +55,7 @@ IRC (be sure to split it into two lines, as its too long for one).</p>
 
 <p>If the left hand side has a warning, telling you to check your NAT or firewall, please
 see the <a href="/config.jsp">config page</a> and make sure that you can receive <b>inbound
-TCP connections on port 8887</b> (or another port that you specify).  Problems forwarding
+TCP and UDP connections on port 8887</b> (or another port that you specify).  Problems forwarding
 that port account for the vast majority of issues people run into.  When it says 
 "Active: 72/85", the "72" means how many peers you are connected with now, and "85" means 
 how many you have spoken with recently - if that first number is 0, you can bet that there
