--- a/readme.html
+++ b/readme.html
@@ -65,8 +65,7 @@ hand side of the page will show up to help you when necessary).</p>
 <p>If you are still having problems, you may want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
-#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
-<a href="http://www.invisiblechat.com/">invisiblechat/IIP</a>, or irc.duck.i2p (they're all 
-linked together).</p>
+#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.duck.i2p or 
+irc.postman.i2p (they're all linked together).</p>
 
 <p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
