Removing references to irc.duck.i2p, adding references to irc.arcturus.i2p, and replacing current ircProxy default destination string with "irc.postman.i2p,irc.arcturus.i2p"
Monotone-Parent: 9fc3fbceb4aeddbb5d4db6a2e3a0130ba137d107
Monotone-Revision: d1fb085e2927db6d7679acaca67cebd6ecf58b4b

Monotone-Author: smeghead
Monotone-Date: 2005-08-16T09:35:58
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -65,7 +65,7 @@ hand side of the page will show up to help you when necessary).</p>
 <p>If you are still having problems, you may want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
-#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.duck.i2p or 
-irc.postman.i2p (they're all linked together).</p>
+#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or 
+irc.arcturus.i2p (they're all linked together).</p>
 
 <p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
