--- a/readme.html
+++ b/readme.html
@@ -5,9 +5,8 @@ the number of "Active: " peers rise, and you should see some local "destinations
 listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:</p>
 <ul>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
-     server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
-     IRC servers (irc.duck.i2p and irc.baffled.i2p), but neither you nor they know
-     where the other is.</li>
+     server at <b>localhost port 6668</b>.  This points at one of three anonymously hosted
+     IRC servers, but neither you nor they know where the other is.</li>
  <li><b>browse "eepsites"</b> - on I2P there are anonymously hosted websites - 
      tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then
      browse to an eepsite - 
@@ -65,7 +64,7 @@ hand side of the page will show up to help you when necessary).</p>
 <p>If you are still having problems, you may want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
-#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or 
+#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p, irc.freshcoffee.i2p or 
 irc.arcturus.i2p (they're all linked together).</p>
 
 <p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
