2005-09-07  BarkerJr     * HTML cleanup for the router console (thanks!) 2005-09-07  jrandom     * Lay the foundation for 'client routers' - the ability for peers to opt       out of participating in tunnels entirely due to firewall/NAT issues.       Individual routers have control over where those peers are used in       tunnels - in outbound or inbound, exploratory or client tunnels, or       none at all.  The defaults with this build are to simply act as before -       placing everyone as potential participants in any tunnel.     * Another part of the foundation includes the option for netDb       participants to refuse to answer queries regarding peers who are marked       as unreachable, though this too is disabled by default (meaning the       routerInfo is retrievable from the netDb).
Monotone-Parent: 088d7a57c7d6a291e89f07f9cfc60fb6fe69e55a
Monotone-Revision: 693fd460fc3a3df7f9538bdffaf87e5642a63515

Monotone-Author: jrandom
Monotone-Date: 2005-09-07T22:31:11
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -5,13 +5,12 @@ the number of "Active: " peers rise, and you should see some local "destinations
 listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:</p>
 <ul>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
-     server at <b>localhost port 6668</b>.  This points at one of three anonymously hosted
+     server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
      IRC servers, but neither you nor they know where the other is.</li>
  <li><b>browse "eepsites"</b> - on I2P there are anonymously hosted websites - 
      tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then
      browse to an eepsite - 
      <ul>
-         <li><a href="http://duck.i2p/">duck.i2p</a>: duck's eepsite, with links to other active sites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
@@ -21,7 +20,7 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
- <li><b>browse the web</b> - there are a pair of HTTP "outproxies" in I2P hooked
+ <li><b>browse the web</b> - there is currently an HTTP "outproxy" in I2P hooked
      up to your own HTTP proxy on port 4444 - simply set your browser's proxy to
      use it (as above) and go to any normal URL - your requests will be bounced
      through the I2P network.</li>
@@ -64,7 +63,6 @@ hand side of the page will show up to help you when necessary).</p>
 <p>If you are still having problems, you may want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
-#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p, irc.freshcoffee.i2p or 
-irc.arcturus.i2p (they're all linked together).</p>
+#i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
 
 <p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
