--- a/readme.html
+++ b/readme.html
@@ -11,10 +11,11 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then
      browse to an eepsite - 
      <ul>
-         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
+         <li><a href="http://search.i2p/">search.i2p</a>: an anonymously hosted search engine of eepsites</li>
+         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
          <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a></li>
      </ul>
