updated to hq.postman.i2p
Monotone-Parent: a1153e24fa03cc329045cbe9c77deaf812c81b06
Monotone-Revision: 02dfbbf73f13b73bb7c78a689ba626abf0ef9481

Monotone-Author: jrandom
Monotone-Date: 2005-09-11T01:40:15
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -29,7 +29,7 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      of the <a href="http://www.bittorrent.com/">BitTorrent</a> application available.</li>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
-     internet!  get your account at <a href="http://www.postman.i2p/">www.postman.i2p</a>.
+     internet!  get your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
      We bundle <a href="http://susi.i2p/">susimail</a>, a web based anonymity-oriented pop3/smtp client
      configured to access postman's mail services.</li>
  <li>and lots more</li>
