* 2005-09-17  0.6.0.6 released 2005-09-17  jrandom     * Clean up syndie a bit more and bundle a default introductory post with       both new installs and updates.     * Typo fixes on the console (thanks bar!)
Monotone-Parent: 0f6290808b524a727d7637301b5357b42aeb50b4
Monotone-Revision: 072b0c7ecb736ba09d4ddfe6de51fa87ac25af94

Monotone-Author: jrandom
Monotone-Date: 2005-09-18T01:29:58
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_0_6

--- a/readme.html
+++ b/readme.html
@@ -4,6 +4,7 @@ only need to do it if that link shows up).  Within 5 minutes, you should see
 the number of "Active: " peers rise, and you should see some local "destinations"
 listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:</p>
 <ul>
+ <li><b>blog anonymously</b> - check out <a href="/syndie/">Syndie</a></li>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
      server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
      IRC servers, but neither you nor they know where the other is.</li>
@@ -17,7 +18,7 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
          <li><a href="http://search.i2p/">search.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a></li>
+         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="fproxy.tino.i2p">fproxy.tino.i2p</a></li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
@@ -25,13 +26,13 @@ listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:<
      up to your own HTTP proxy on port 4444 - simply set your browser's proxy to
      use it (as above) and go to any normal URL - your requests will be bounced
      through the I2P network.</li>
- <li><b>transfer files</b> - there is an <a href="http://duck.i2p/i2p-bt/">I2P port</a>
+ <li><b>transfer files</b> - there is an <a href="http://i2p-bt.postman.i2p/">I2P port</a>
      of the <a href="http://www.bittorrent.com/">BitTorrent</a> application available.</li>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
      internet!  get your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
-     We bundle <a href="http://susi.i2p/">susimail</a>, a web based anonymity-oriented pop3/smtp client
-     configured to access postman's mail services.</li>
+     We bundle <a href="http://susi.i2p/">Susi's</a> <a href="/susimail/susimail">susimail</a>,
+     a web based anonymity-oriented pop3/smtp client configured to access postman's mail services.</li>
  <li>and lots more</li>
 </ul>
 
