* 2005-09-29  0.6.1 released 2005-09-29  jrandom     * Let syndie users modify their metadata.     * Reseed the router on startup if there aren't enough peer references       known locally.  This can be disabled by creating the file .i2pnoreseed       in your home directory, and the existing detection and reseed handling       on the web interface is unchanged.
Monotone-Parent: ee8728e9b26bd867ee44d88b7f75b9954f22f377
Monotone-Revision: 656c88e3bcf486095c453911923c40403349eb7f

Monotone-Author: jrandom
Monotone-Date: 2005-09-29T19:19:22
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -1,8 +1,7 @@
-<p>If this is your first time running I2P, you will see a link on the left hand
-side telling you to "reseed" - click that to get connected to the network (you
-only need to do it if that link shows up).  Within 5 minutes, you should see
-the number of "Active: " peers rise, and you should see some local "destinations"
-listed (if not, <a href="#trouble">see below</a>).  Once those are up, you can:</p>
+<p>If you've just started I2P, the Active: number on the left should start to
+grow over the next few minutes and you'll see some local "destinations" listed
+on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
+you can:</p>
 <ul>
  <li><b>blog anonymously</b> - check out <a href="/syndie/">Syndie</a></li>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
