--- a/apps/syndie/jsp/index.html
+++ b/apps/syndie/jsp/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html
-><head><title>Syndie</title></head
-><body><meta http-equiv="refresh" content="0;url=index.jsp" /><a href="index.jsp">Enter</a></body></html>
+><head><title>Welcome to Syndie</title></head
+><body bgcolor="#BBBBFF"><div align="center" valign="center">
+<table border="0"><tr><td valign="top">
+<img src="images/syndielogo.png" alt="" /></td>
+<td valign="top" align="left"><b>Welcome to Syndie!</b><br />
+
+<p>Jump right in and <a href="threads.jsp">read</a> syndicated posts</p>
+<p><a href="post.jsp">Create</a> a new post of your own</p>
+<p><a href="about.html">Learn more</a> about Syndie</p>
+</td></tr></table>
+</div>
+</body></html>
