--- a/apps/syndie/jsp/about.html
+++ b/apps/syndie/jsp/about.html
@@ -1,5 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html
 ><head><title>What is Syndie?</title></head
 ><body bgcolor="#BBBBFF">
-<p>Syndie is, like, neat, man.  (aka todo)</p>
+
+<p>Perhaps the best introduction to Syndie can be found <a
+href="threads.jsp?post=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/1132012800001">in
+Syndie itself</a>.</p>
+
+<p>Updates can be found by filtering for the <a
+href="threads.jsp?tags=syndie.intro">syndie.intro</a> tag (if you only want to
+receive posts that <a
+href="threads.jsp?author=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=">jrandom</a>
+ made with that tag, that can be <a
+href="threads.jsp?tags=syndie.intro&author=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=">achieved</a>
+as well).</p>
+
+<p>If you have any questions or problems with Syndie, just post them and
+syndicate it up to <a href="http://syndiemedia.i2p/">syndiemedia.i2p</a> (which should show up as the default archive
+on new installs).  You can also use the <a href="http://forum.i2p.net/">I2P
+forums</a> if you're having trouble getting Syndie to work, and people are
+almost always around on the <a href="http://forum.i2p.net/viewtopic.php?t=952">#i2p irc
+channel</a>.</p>
 </body></html>
