2005-11-25  jrandom     * Further Syndie UI cleanups     * Logging cleanup     * Fixed link to fproxy.tino.i2p (thanks zzz!)
Monotone-Parent: 50b2161212fd38776fffa3cadc350f15825a120d
Monotone-Revision: fdeb55d3bd9a2480aa81ed42a6e7fe277bfe27f6

Monotone-Author: jrandom
Monotone-Date: 2005-11-26T05:05:52
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@ you can:</p>
          <li><a href="http://search.i2p/">search.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="fproxy.tino.i2p">fproxy.tino.i2p</a></li>
+         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a></li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
